# python-ui-adapter

./: README.md  create_knowledge_graph.py  croissant.jsonld  pyproject.toml
.github/workflows/: ci.yaml
config/: biocypher_config.yaml  schema_config.yaml
data/in/: synthetic_protein_interactions.tsv
scripts/: create_knowledge_graph.py
src/adapters/: adapter_synthetic_proteins.py
template_package/adapters/: adapter_synthetic_proteins.py
tests/: test_adapter_synthetic_proteins.py
