[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "biocypher-synthetic-protein-adapter"
version = "0.11.0"
description = "BioCypher adapter for synthetic protein data"
readme = "README.md"
authors = [
    {name = "Inga Ulusoy", email = "ssc@uni-heidelberg.de"},
]
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "biocypher>=0.11.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pyyaml>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
